--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                 <li><a href="./index.html">Home</a></li>
                 <li><a href="./about.html">About</a></li>
                 <li><a href="./contact.html">Contact</a></li>
+                <li><a href="./test.html">Page for testing new content</a></li>
             </ul>
         </nav>
     </header>
